force-app/src/objects/Accreditation_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Accreditation_Partner_Status__c</fullName>
        <formula>IF(OR(AND(ISNULL(Start_Date__c), ISNULL(End_Date__c)),AND(Start_Date__c &lt;= TODAY(), ISNULL(End_Date__c)),AND(Start_Date__c &lt;= TODAY(), End_Date__c &gt;= TODAY())), &quot;Current&quot;,IF(AND(Start_Date__c &lt; TODAY(), End_Date__c &lt; TODAY()),&quot;Previous&quot;,&quot;Future&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation Partner Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation__c</fullName>
        <label>Accreditation</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Accreditation Partners</relationshipLabel>
        <relationshipName>Accreditation_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_user_IAA__c</fullName>
        <formula>IF(  $User.Id =  Accreditation__r.IAA__c  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current user IAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_user_IAC__c</fullName>
        <formula>IF(  $User.Id  = Accreditation__r.IAC__c  , true , false)</formula>
        <label>Current user IAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Data Loader</description>
        <label>Data Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of cooperation with Accreditation Partner</description>
        <inlineHelpText>End Date of cooperation with Accreditation Partner</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accreditation Partners</relationshipLabel>
        <relationshipName>Accreditation_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_text__c</fullName>
        <formula>Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of cooperation with Accreditation Partner</description>
        <inlineHelpText>Start Date of cooperation with Accreditation Partner</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Accreditation Partner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Accreditation Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditation Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>